# gd2doc

./: README.md  mkdocs.yml  pyproject.toml  shell.nix
src/: cli.py  generator.py  parser.py
tests/: test_cli.py  test_generator.py  test_parser.py
tests/data/: advanced.gd  basic.gd  double_hash.gd
tests/data/sub/: nested.gd
